// Vitest Snapshot v1

exports[`<Remove /> > renders when [show=false] 1`] = `
<RemoveModal
  name="test"
  noun="Sample"
  onConfirm={[Function]}
  onHide={[MockFunction spy]}
  show={false}
/>
`;

exports[`<Remove /> > renders when [show=true] 1`] = `
<RemoveModal
  name="test"
  noun="Sample"
  onConfirm={[Function]}
  onHide={[MockFunction spy]}
  show={true}
/>
`;
